# DRIMS2-2025

./: .gitignore  .gitmodules  99-robotiq.rules  README.md  check.sh  connect.sh  cyclone.sh  cyclone_config.xml  setup.sh  start.sh  start_as_root.sh
docker/: Dockerfile  build.sh  build_no_copy.sh  check_script.sh  deps.repos  real_robot.interal.launch  setup_robot_connection.sh
drims_ws/: simulate.md
drims_ws/src/DRIMS_template/: CMakeLists.txt  README.md  package.xml
drims_ws/src/DRIMS_template/config/: params.yaml
drims_ws/src/DRIMS_template/launch/: task_dice.launch  test_example.launch  test_spawn_dice.launch
drims_ws/src/DRIMS_template/scripts/: take_the_dice_example.py  take_the_dice_template.py
drims_ws/src/DRIMS_template/src/: task_dice.cpp  test_example.cpp
drims_ws/src/dice_detector/: package.xml  setup.cfg  setup.py
drims_ws/src/dice_detector/dice_detector/: dice_detector.py
drims_ws/src/drims_summer_school_slutions/: CMakeLists.txt  README.md  foxglove.json  package.xml
drims_ws/src/drims_summer_school_slutions/cfg/: ColorDetectorConfig.cfg
drims_ws/src/drims_summer_school_slutions/scripts/: calibrate.py  calibration_check.py  cam_read.py  color_detector.py  image_saver.py  intrinsic.py
drims_ws/src/example_img/: CMakeLists.txt  package.xml
drims_ws/src/example_img/launch/: launch.launch
drims_ws/src/example_img/scripts/: example_image.py
drims_ws/src/example_img/src/: example_img.cpp
drims_ws/src/ros_intro/: CMakeLists.txt  package.xml
drims_ws/src/ros_intro/cfg/: parameters.cfg
drims_ws/src/ros_intro/launch/: params_static.launch  tf.launch
drims_ws/src/ros_intro/scripts/: custom_publisher.py  dynamic_param.py  publisher.py  service_client.py  service_server.py  static_parameter.py  subscriber.py  tf_demo.py  timer.py
windows_users/: .wslconfig  attach_usb.ps1
