<?xml version="1.0"?>
<package format="2">
  <name>ros_intro</name>
  <version>1.0.0</version>
  <description>DRIM_summer_school</description>
  <license>TODO</license>

  <maintainer email="simone.mentasti@polimi.it">simone</maintainer>
 
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>​

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

<export>
  </export>
</package>
